Deploy scrollbar fix

--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -118,27 +118,37 @@ $sm: $min-sm - 0.02px;
 
 // CUSTOM SCROLLBAR
 
-::-webkit-scrollbar {
+html {
+  overflow-y: scroll;
+  scrollbar-color: var(--clr-dark) #bbb;
+  scrollbar-width: thin;
+}
+
+.quiz__container::-webkit-scrollbar,
+.contact-modal__container::-webkit-scrollbar {
   width: 10px;
   border-bottom-right-radius: 10px;
   border-top-right-radius: 10px;
   background-color: #f5f5f5;
 }
 
-::-webkit-scrollbar-thumb {
+.quiz__container::-webkit-scrollbar-thumb,
+.contact-modal__container::-webkit-scrollbar-thumb {
   border-bottom-right-radius: 10px;
   border-top-right-radius: 10px;
   background: var(--clr-dark);
   box-shadow: inset 0 0 1px 1px #5c6670;
 }
 
-::-webkit-scrollbar-track {
+.quiz__container::-webkit-scrollbar-track,
+.contact-modal__container::-webkit-scrollbar-track {
   border-bottom-right-radius: 10px;
   border-top-right-radius: 10px;
   background: #eee;
   box-shadow: 0 0 1px 1px #bbb, inset 0 0 7px rgba(0, 0, 0, 0.7);
 }
 
-::-webkit-scrollbar-thumb:hover {
+.quiz__container::-webkit-scrollbar-thumb:hover,
+.contact-modal__container::-webkit-scrollbar-thumb:hover {
   background: linear-gradient(left, #8391a6, #536175);
 }
